kubernetes/deploy/proxies/internal/openvpn/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: openvpn
subsets:
  - addresses:
      - ip: 192.168.3.16
    ports:
      - port: 943
        name: http
