kubernetes/deploy/proxies/internal/openvpn/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openvpn
spec:
  ports:
  - protocol: TCP
    port: 943
    name: http
    targetPort: 943
