kubernetes/deploy/proxies/internal/openvpn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: openvpn
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`openvpn.vandeneede.org`)
    services:
    - name: openvpn
      port: 943
      scheme: https
